--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,19 @@
+# App
 server.port=8081
 
+# Security
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080/realms/booking-bus-tickets-realm
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/realms/booking-bus-tickets-realm/protocol/openid-connect/certs
+
+# Database
+spring.flyway.user=root
+spring.flyway.password=example_password
+spring.flyway.url=jdbc:mysql://localhost:3306/bus_management_system?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/bus_management_system
+spring.datasource.username=root
+spring.datasource.password=example_password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=validate
+
