--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,13 +7,15 @@ spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/real
 
 # Database
 spring.flyway.user=root
-spring.flyway.password=example_password
+spring.flyway.password=password
 spring.flyway.url=jdbc:mysql://localhost:3306/bus_management_system?createDatabaseIfNotExist=true
 spring.datasource.url=jdbc:mysql://localhost:3306/bus_management_system
 spring.datasource.username=root
-spring.datasource.password=example_password
+spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=validate
+
+
 
