Add login and registration, keycloak communication and role assignment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,22 @@ services:
       - "9000:80"
     depends_on:
       - db
+  keycloak:
+    image: quay.io/keycloak/keycloak:latest
+    container_name: keycloak
+    restart: always
+    environment:
+      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin
+      KC_DB: mysql
+      KC_DB_URL: jdbc:mysql://db:3306/keycloak
+      KC_DB_USERNAME: root
+      KC_DB_PASSWORD: password
+    command: start-dev
+    ports:
+      - "8080:8080"
+    depends_on:
+      - db
 
 volumes:
   mysql-data:
