--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,12 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=validate
 spring.jackson.time-zone=UTC
 
+# Keycloak
+keycloak.server-url=http://localhost:8080
+keycloak.realm=booking-bus-tickets-realm
+keycloak.client-id=spring-boot-client
+keycloak.client-secret=wDDxnlvoCaWgTOmj3owOrkA1YjqLceDX
+
 
 
 
